--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>自己紹介 | 加藤悠也</title>
+  <title>自己紹介 | 斎藤太一</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="fade-in">
-    <img src="profile.jpg" alt="プロフィール写真">
-    <h1>こんにちは！ぼく [加藤悠也] でげす</h1>
+    <img src="IMG_1585.JPEG" alt="プロフィール写真">
+    <h1>こんにちは！ぼく [斎藤太一] でげす</h1>
     <p>ちんぽ | おっぱい大好き | </p>
   </header>
 
@@ -54,7 +54,7 @@
   </section>
 
   <footer class="fade-in">
-    <p>&copy; 2026 あなたの名前</p>
+    <p>&copy; 2026 斎藤太一</p>
   </footer>
 
   <script src="script.js"></script>
