--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="fade-in">
-    <img src="IMG_1585.JPEG" alt="プロフィール写真">
+    <img src="IMG_1585.JPG" alt="プロフィール写真">
     <h1>こんにちは！ぼく [斎藤太一] でげす</h1>
     <p>ちんぽ | おっぱい大好き | </p>
   </header>
